# seekvfs

./: CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: release.yml
docs/: quickstart.md
docs/recipes/: maximal.md  minimal.md
src/seekvfs/: protocol.py  router.py  vfs.py
src/seekvfs/tools/: __init__.py  anthropic.py  langgraph.py  mcp.py  openai.py  spec.py
src/seekvfs_recipes/maximal/: __init__.py  backend.py  dao.py
src/seekvfs_recipes/minimal/: backend.py
tests/unit/: test_observability.py  test_router.py  test_tools_spec.py
