[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "seekvfs"
version = "0.1.0"
description = "A protocol-level unified VFS for AI agents with L0/L1/L2 tiered storage."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "SeekVFS Contributors" }]
keywords = ["agent", "vfs", "llm", "storage", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anyio>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
observability = [
    "logfire>=4.32.1",
]
# Full — Maximal recipe (OceanBase + all LangChain providers) + all integrations
full = [
    "pyobvector>=0.2.6",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "mcp",
    "seekvfs[observability]",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "seekvfs[observability]",
]

[project.urls]
Homepage = "https://github.com/seekvfs/seekvfs"
Repository = "https://github.com/seekvfs/seekvfs"

[tool.hatch.build.targets.wheel]
packages = ["src/seekvfs", "src/seekvfs_recipes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/seekvfs",
    "src/seekvfs_recipes",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
packages = ["seekvfs", "seekvfs_recipes"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
